--- a/latex/sections/appendix.tex
+++ b/latex/sections/appendix.tex
@@ -25,15 +25,13 @@
 % \end{SCfigure}
 
 
-
-
 % ==========================================================================================
 % 
 %                                     RV EXTRACTIONS
 % 
 % ==========================================================================================
 \newpage
-\section{RV extractions}\label{appendix:RV_extraction}
+\section{Additional details}\label{appendix:RV_extraction}
 
 \begin{SCfigure}[1][!ht]%
     \begin{wide}  
@@ -59,7 +57,7 @@
 \end{wide}
 \end{SCfigure}
 
-\subsection{Computational run times}\label{appendix:run_times} 
+\subsection*{Computational run times}
 \todo{add number of function calls for the fitting}
 
 \todo{add number of peak analyzed and so on}
@@ -72,7 +70,7 @@
 % 
 % ==========================================================================================
 \newpage
-\section{Results}\label{appendix:results}
+\section{Additional results}\label{appendix:results}
 
 \small{RV extracts from three more stars: HD 101501, HD 10700 and HD 26965. In each figure the top shows my final extracted RV shifts using excalibur calibrated, barycentric-corrected data (data column \texttt{bary\char`_excalibur}), the center shows Lily Zhao et al's results using a chunk-by-chunk (CBC) analysis technique \cite{yale_data}, and the bottom shows residuals from subtracting Lily's results from mine. }
 
