--- a/latex/sections/introduction.tex
+++ b/latex/sections/introduction.tex
@@ -1,3 +1,4 @@
+\todoNow{Expand}: and add illustration of the RV method. 
 
 The radial velocity method was used to discover the first exoplanets and continues to be one of the main methods for the discovery and characterization exoplanets \cite{radial_velocity_techniques}. With new extreme-precision radial velocity (EPRV) spectrographs such as the EXtreme PREcision Spectrograph (EXPRES), data from which this project is based on, we are slowly approaching the precision necessary for the discovery of Earth-sized planets around Sun-like stars. For this to succeed, it is however necessary to understand and mitigate many effects, such as the movement of the Earth relative to the center of mass of the solar system (barycentric corrections), light scattering in the Earth's atmosphere (tellurics) and light scattering inside the spectrograph (blaze). 
 A general wavelength calibration of the spectrograph is also needed, the quality of which of course directly influences the precision of the final radial velocities that can be obtained. For that purpose, EXPRES utilizes a Laser Frequency Comb (LFC), is a rather new technique. While to extract radial velocities (RV) we measure the apparent wavelength shift between observations over a period of time, preferably more than a year, and utilize the well-known doppler effect. 
