--- a/latex/sections/theory.tex
+++ b/latex/sections/theory.tex
@@ -1,10 +1,21 @@
+\todoNow{Go through}
+
 \subsection{Radial velocity method for exoplanet detection}
-The radial velocity method is one of the few current methods of detecting exoplanets. Two celestial bodies in orbit around each other, such as a star and a planet, orbit their common center of mass (barycenter). This means that the star, although typically much more massive than the planet, is also in movement relative to an outside observer. The larger the planet is, compared to the star, the larger this movement will be. For now, it is not possible to directly observe exoplanets. One way of indirect detection however is thus measuring the movement of the star. We can measure the relative movement of a star through the doppler effect; the electromagnetic spectrum of the star observed on Earth will be blue shifted when the star is moving toward us and red shifted when moving away. The potential indirect signal of a planet will thus consist of a periodic doppler shift in the spectrum of the host star. For this method in general, several years of data collection is necessary. One should at least have one full orbit of observational data, and, to decrease statistical uncertainties, several orbits is preferential.
+The radial velocity method is one of the few current methods of detecting exoplanets. Two celestial bodies in orbit around each other, such as a star and a planet, orbit their common center of mass (barycenter). This means that the star, although typically much more massive than the planet, is also in movement relative to an outside observer. The larger the planet is, compared to the star, the faster the star will appear to be moving and we can measure this movement through the doppler effect: the electromagnetic spectrum of the star observed on Earth will be blue shifted when the star is moving toward us and red shifted when moving away. If there is a planet around a star, we should observe a periodic doppler shift. The method is illustrated in figure \ref{fig:rv_method_illustration}.
+
+\begin{SCfigure}[1][!ht]%
+    \begin{wide}  
+        \includegraphics[width=\textwidth]{figures/rv_method_illustration.pdf}
+        \caption{Illustration of the radial velocity method for exoplanet detection. © Johan Jarnestad/The Royal Swedish Academy of Sciences}
+        \label{fig:rv_method_illustration}
+    \end{wide}
+\end{SCfigure}
 
 A large planet like Jupiter induces a radial velocity (RV) in the Sun of about 12.7 m/s when observed in its plane of orbit. While a small one like Earth only induces an RV of about 9 cm/s. (p. 29, \cite{radial_velocity_techniques}). 
 
 \vspace{0.5cm}
 \todo{Possibly describe the RV calculation in more \href{http://exoplanets.astro.yale.edu/workshop/EPRV/Bibliography_files/Radial_Velocity.pdf}{detail} and compute Earth K. } 
+
 
 \subsubsection{Doppler shift}
 
@@ -44,7 +55,7 @@ Wavelength calibrations are performed with the use of a Laser Frequency Comb
 
 \bigbreak
 \noindent\textbf{Spectral resolution:}
-EXPRES has a spectral resolution of $R = 150'000$, where R is defined as $R = \lambda / \Delta\lambda$. Inverting this we get what's called the resolution element of the Instrumental Spread Function (ISF) (or Line Spread Function (LSF)), $\Delta\lambda = \lambda/R$. For a wavelength of say of $\lambda = 5000$Å, this comes out to $\Delta\lambda = 5000\text{Å}/150,000 \approx 0.033 $Å, and it describes the "blurring" of monochromatic beams on the detector. Absorption features narrower than $\Delta\lambda$ can, in a well-behaved spectrograph, be approximated as a normalized, symmetric Gausssian function with $\text{FWHM} = \Delta\lambda$. Specifically for EXPRES, a super-gauss is however a better fit. LFC lines being monochromatic and thus very narrow will appear on the detector as a super-gaussian with $\Delta\lambda$ ranging from 3.9-5 pixels across the detector. By fitting, the center of the peak can be identified to a fraction of a pixel. The LFC lines are seperated by about 10 pixels to remain distinct after this blurring. For star-spectra however some emission and absorption lines will be too close together and will appear "blended" on the detector. 
+EXPRES has a spectral resolution of $R = 150'000$, where R is defined as $R = \lambda / \Delta\lambda$. Inverting this we get what's called the resolution element of the instrumental spread Function (or line spread function), $\Delta\lambda = \lambda/R$. For a wavelength of say of $\lambda = 5000$Å, this comes out to $\Delta\lambda = 5000\text{Å}/150,000 \approx 0.033 $Å, and it describes the "blurring" of monochromatic beams on the detector. Absorption features narrower than $\Delta\lambda$ can, in a well-behaved spectrograph, be approximated as a normalized, symmetric Gausssian function with $\text{FWHM} = \Delta\lambda$. Specifically for EXPRES, a super-gauss is however a better fit\cite{yale_data}. LFC lines being monochromatic and thus very narrow will appear on the detector as a super-gaussian with $\Delta\lambda$ ranging from 3.9-5 pixels across the detector. By fitting, the center of the peak can be identified to a fraction of a pixel. The LFC lines are seperated by about 10 pixels to remain distinct after this blurring. For star-spectra however some emission and absorption lines will be too close together and will appear "blended" on the detector. 
 
 \bigbreak
 \noindent\textbf{Barycentric correction:}
@@ -65,17 +76,7 @@ For development of RV extraction method, observations from four stars were used:
     \item HD 34411 (188 observations, 58 nights, Oct. 08, 2019 - Nov. 27, 2020)
 \end{itemize}
 
-The observations for HD34411 are plotted in figure \ref{fig:dates_HD34411}. Most days have 3-4 observations, and there are significant gaps in the data as well.
-
-\begin{SCfigure}[1][!h]%
-    \begin{wide}  
-        \includegraphics[width=\textwidth]{figures/dates_HD34411.pdf}
-        \caption{EXPRES observations of HD 34411}
-    \label{fig:dates_HD34411}
-    \end{wide}
-\end{SCfigure}
-        
-\todo{Specify which data was used for LFC calibration method development}
+Most days have 3-4 observations, and there are significant gaps in the data as well. LFC exposure files were provided by Lars A. Buchhave. 
 
 \subsubsection{Data structure}
 The data used in this project consists of already packaged FITS (Flexible Image Transport System) files, which is a portable file standard widely used in the astronomy community to store images and tables. There is a FITS file for each observation, containing a variety of mesaurements for each pixel on the CCD. 
@@ -85,21 +86,14 @@ This would give the CCD the very elonganted dimensions of 86$\times$7920, but as
 
 Furthermore, the CCD is not equally sensitive everywhere, and there are areas along the edges that are deemed useless. The data comes with a mask which shows which pixels are should be used. 
 
-To perform the calibration the following variables are used: \verb|spectrum|, \verb|uncertainty|, \verb|wavelength| and \verb|continuum|. To perform the RV extraction on the pre-calibrated data the following variables are used: \verb|bary_excalbur|, 
-\verb|excalibur_mask|, \verb|spectrum|, \verb|uncertainty| and \verb|continuum|.
+\subsubsection{Noise and corrections}
+Photon noise and read noise are the two largest contributors to the noise on a given pixel on the EXPRES CCD. These two quantities are measured and summed in quadrature for each pixel. Photon noise is assumed to be poisson distributed and the standard deviation is then the square root of photon counts. Read noise is calculated emperically and is assumed to be consistent throughout each night of observation. \cite{first_RV_from_EXPRES}. 
 
-\subsubsection{Noise}
-Photon noise and read noise are the two largest contributors to the noise on a given pixel on the EXPRES CCD. These two quantities are measured and summed in quadrature for each pixel. Photon noise is assumed to be poisson distributed and the standard deviation is then the square root of photon counts. Read noise is calculated emperically, details of which will not be discussed, but is assumed to be consistent throughout each night of observation. 
+Although manufactures have tried their best to limit it, the CCD still gets hits by scattering light, being the strongest in the center of the detector. This has been modeled and subtracted from the spectrum by measureing the photon count in between orders. The blaze function is available in the data file and allows for recovering the original counts for each pixel by multiplying the blaze with the spectrum.
 
-\subsubsection{Correction: Scatter / blaze}
-Although manufactures have tried their best to limit it, the CCD still gets hits by scattering light, being the strongest in the center of the detector. It is modeled and subtracted by measureing the photon count in between orders.
+Tellurics in the context of spectrographs refers to the contamination that ground based spectrographs must cope with, which occurs as the light passes through our atmosphere encountering molecules such as oxygen and water vapor on the way. The I use is already corrected for this, with a technique called SELENITE\cite{yale_data}.
 
-\subsubsection{Correction: Tellurics}
-Tellurics (general definition being originating from the Earth) in this context refers to the contamination that ground based spectrographs have to deal with, which occurs as the light passes through the Earth's atmosphere, encountering molecules such as oxygen and water vapor. On EXPRES the technique used is called SELENITE [https://arxiv.org/pdf/1903.08350.pdf].
+The barycentric correction is vital, as this is what removes the movement of the Earth around the center-of-mass of the solar system from the data. How it is done exactly I've done delved into during this project. 
 
-\subsubsection{Correction: Barycentric corrections}
-\todo{}
-
-
-
+At the end, the largest source of error comes from stellar activity. Variations in the light from the star in quesiton due to various physical processes. Dark spots, granulation, "starquakes", rotation are a few examples. 
 
